// 默认为 pinecone 项目工具类，修改部分路径及数据库连接

--- a/src/main/resources/template/Resp.java.vm
+++ b/src/main/resources/template/Resp.java.vm
@@ -1,6 +1,6 @@
 package ${package}.modules.${moduleName}.model.resp;
 
-import com.daxiongys.common.model.BaseResp;
+import cn.acorg.model.BaseResp;
 import io.swagger.annotations.ApiModel;
 import io.swagger.annotations.ApiModelProperty;
 import lombok.*;
