--- a/src/main/resources/template/DO.java.vm
+++ b/src/main/resources/template/DO.java.vm
@@ -1,7 +1,7 @@
 package ${package}.modules.${moduleName}.entity;
 
 import com.baomidou.mybatisplus.annotation.TableName;
-import com.daxiongys.common.model.BaseDO;
+import cn.acorg.model.BaseDO;
 import lombok.Data;
 import lombok.EqualsAndHashCode;
 #if(${hasBigDecimal})
