--- a/src/main/resources/template/Req.java.vm
+++ b/src/main/resources/template/Req.java.vm
@@ -1,6 +1,6 @@
 package ${package}.modules.${moduleName}.model.req;
 
-import com.daxiongys.common.model.BaseReq;
+import cn.acorg.model.BaseReq;
 import io.swagger.annotations.ApiModel;
 import io.swagger.annotations.ApiModelProperty;
 import lombok.*;
