// 修改生成项目包路径

--- a/src/main/resources/template/Controller.java.vm
+++ b/src/main/resources/template/Controller.java.vm
@@ -1,6 +1,6 @@
-package ${package}.modules.${moduleName}.controller;
+package ${package}.${moduleName}.controller;
 
-import ${package}.modules.${moduleName}.service.${className}Service;
+import ${package}.${moduleName}.service.${className}Service;
 import io.swagger.annotations.Api;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
