--- a/src/main/resources/template/DO.java.vm
+++ b/src/main/resources/template/DO.java.vm
@@ -1,7 +1,7 @@
-package ${package}.modules.${moduleName}.entity;
+package ${package}.${moduleName}.entity;
 
 import com.baomidou.mybatisplus.annotation.TableName;
-import cn.acorg.model.BaseDO;
+import cn.acorg.common.core.model.BaseDO;
 import lombok.Data;
 import lombok.EqualsAndHashCode;
 #if(${hasBigDecimal})
