--- a/src/main/resources/template/Service.java.vm
+++ b/src/main/resources/template/Service.java.vm
@@ -1,7 +1,7 @@
-package ${package}.modules.${moduleName}.service;
+package ${package}.${moduleName}.service;
 
 import com.baomidou.mybatisplus.extension.service.IService;
-import ${package}.modules.${moduleName}.entity.${className};
+import ${package}.${moduleName}.entity.${className};
 
 /**
  * ${comments}
